refactor some files

--- a/index.html
+++ b/index.html
@@ -11,23 +11,33 @@
 </head>
 
 <body>
+    <div id="title">
+
+    </div>
+    <div id="level">
+        <button id="easyBtn">Easy</button>
+        <button id="mediumBtn">Medium</button>
+        <button id="hardBtn">Hard</button>
+    </div>
+
     <div class="container">
-        <div id="title">
-            <h1>
-                Sudoku
-            </h1>
-        </div>
         <div id="board">
 
         </div>
         <div id="result">
-            
+
+        </div>
+
+        <div id="option">
+
         </div>
     </div>
 
     <script src="./js/filter.js"></script>
-    <script src="./js/boards.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/constant.js"></script>
+    <script src="./js/sudoku.js"></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/core.js"></script>
 </body>
 
 </html>
