next game function in progress

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     </div>
     <div id="level">
-        <button id="easyBtn">Easy</button>
-        <button id="mediumBtn">Medium</button>
-        <button id="hardBtn">Hard</button>
+        <button id="easyBtn">Easy 3x3</button>
+        <button id="mediumBtn">Medium 6x6</button>
+        <button id="hardBtn">Hard 9x9</button>
     </div>
 
     <div class="container">
