add gif and effect

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <div id="title">
+        <h1 id="heading"></h1>
+    </div>
+    <div id="record">
 
     </div>
     <div id="level">
