implement timer and record field

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <div id="title">
         <h1 id="heading"></h1>
     </div>
-    <div id="record">
+    <div id="time">
+        <div id="record">
+            
+        </div>
 
+        <div id="stopwatch" style="display: none;">
+            
+        </div>
     </div>
     <div id="level">
         <button id="easyBtn">Easy 3x3</button>
