--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="./js/constant.js"></script>
     <script src="./js/sudoku.js"></script>
     <script src="./js/game.js"></script>
+    <script src="./js/level-generator.js"></script>
     <script src="./js/core.js"></script>
 </body>
 
